refactor(tests): remove error handling and output checks for nested JSON SQLite test refactor(datastream): clean up SetConfig method by removing unused column assignment

--- a/cmd/sling/tests/replications/r.71.json_sqlite_nested.yaml
+++ b/cmd/sling/tests/replications/r.71.json_sqlite_nested.yaml
@@ -49,4 +49,4 @@ streams:
       format: json
       flatten: true
     columns:
-      id: bigint  # Pre-defining columns triggers error
+      id: bigint 
