feat(jq): add support for jq expressions
- introduce `jq` as a source option for JSON-based data streams
- enable `jq` for API source configuration and data extraction
- implement `jq` processing within `JSONStream` for various database sources
- add `JqCompile` and `JqRun` utilities with caching for efficient `jq` expression execution
- include comprehensive test cases for `jq` source option and `jq()` transform function

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1907,3 +1907,12 @@
     - 'setting incremental state'
     - 'execution succeeded'
     - 'BigQuery state_result =>'
+
+- id: 197
+  name: Test jq source option and jq() transform function
+  run: 'sling run -d -p cmd/sling/tests/pipelines/p.12.jq.yaml'
+  output_contains:
+    - 'jq replication row count =>'
+    - 'jq source option line count =>'
+    - 'jq() function result =>'
+    - 'execution succeeded'
