--- a/core/dbio/templates/fabric.yaml
+++ b/core/dbio/templates/fabric.yaml
@@ -64,6 +64,33 @@ core:
       FILE_TYPE = 'PARQUET'{credential_expr}
     )
 
+  # SQL Server supports all 4 merge strategies
+  merge_insert: |
+    INSERT INTO {tgt_table} ({insert_fields})
+    SELECT {src_fields} FROM {src_table} src
+
+  merge_update: |
+    UPDATE tgt
+    SET {set_fields}
+    FROM {tgt_table} tgt
+    INNER JOIN {src_table} src
+    ON {src_tgt_pk_equal}
+
+  merge_update_insert: |
+    MERGE INTO {tgt_table} tgt
+    USING (SELECT {src_fields} FROM {src_table}) src
+    ON ({src_tgt_pk_equal})
+    WHEN MATCHED THEN UPDATE SET {set_fields}
+    WHEN NOT MATCHED THEN INSERT ({insert_fields}) VALUES ({src_insert_fields});
+
+  merge_delete_insert: |
+    DELETE tgt FROM {tgt_table} tgt
+    WHERE EXISTS (
+      SELECT 1 FROM {src_table} src
+      WHERE {src_tgt_pk_equal}
+    );
+    INSERT INTO {tgt_table} ({insert_fields})
+    SELECT {src_fields} FROM {src_table} src
 
 metadata:
   databases: select db_name() as name
@@ -444,3 +471,36 @@ general_type_map:
   timestampz: "datetime2(6)"
   timez: "varchar()"
   uuid: uniqueidentifier
+
+# Schema migration: default value translation between native and generalized forms
+default_value_map:
+  to_general:
+    "getdate()": "current_timestamp"
+    "(getdate())": "current_timestamp"
+    "GETDATE()": "current_timestamp"
+    "(GETDATE())": "current_timestamp"
+    "sysdatetime()": "current_timestamp"
+    "(sysdatetime())": "current_timestamp"
+    "getutcdate()": "current_timestamp_utc"
+    "(getutcdate())": "current_timestamp_utc"
+    "GETUTCDATE()": "current_timestamp_utc"
+    "(GETUTCDATE())": "current_timestamp_utc"
+    "newid()": "uuid()"
+    "(newid())": "uuid()"
+    "NEWID()": "uuid()"
+    "(NEWID())": "uuid()"
+    "newsequentialid()": "uuid()"
+    "(newsequentialid())": "uuid()"
+    "((1))": "true"
+    "((0))": "false"
+    "(1)": "true"
+    "(0)": "false"
+  from_general:
+    "current_timestamp": "GETDATE()"
+    "current_timestamp_utc": "GETUTCDATE()"
+    "current_date": "CAST(GETDATE() AS DATE)"
+    "current_time": "CAST(GETDATE() AS TIME)"
+    "uuid()": "NEWID()"
+    "true": "1"
+    "false": "0"
+    "null": "NULL"
